[project]
name = "beastcp"
version = "1.0.2"
description = "A high-performance cp-like file copier with resume, verification, tqdm progress, and multi-threaded directory sync."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Utkarsh Pathak", email = "utkarshpathak16@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "click"
]


[project.scripts]
beastcp = "beastcp.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
